cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

/* Opaque handle types */
typedef struct MLIRContext_* MLIRContextHandle;
typedef struct MLIRModule_* MLIRModuleHandle;
typedef struct MLIRFunction_* MLIRFunctionHandle;
typedef struct MLIRValue_* MLIRValueHandle;
typedef struct MLIRType_* MLIRTypeHandle;
MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context,
                                                size_t rank,
                                                MLIRTypeHandle elementType);
void mlir_type_destroy(MLIRTypeHandle type);
/* Function creation */
MLIRFunctionHandle mlir_function_create(MLIRModuleHandle module,
                                        const char* name,
                                        MLIRTypeHandle* inputTypes,
                                        size_t numInputs,
                                        MLIRTypeHandle* outputTypes,
                                        size_t numOutputs);
void mlir_function_destroy(MLIRFunctionHandle function);
MLIRValueHandle mlir_function_get_argument(MLIRFunctionHandle function, size_t index);
/* TOSA operations */
MLIRValueHandle mlir_tosa_add(MLIRFunctionHandle function,
                              MLIRValueHandle lhs,
                              MLIRValueHandle rhs,
                              MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function,
                              MLIRValueHandle lhs,
                              MLIRValueHandle rhs,
                              MLIRTypeHandle resultType);