cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MemorySegment mlir_type_create_tensor_dynamic(MemorySegment context, long rank, MemorySegment elementType) {
        var mh$ = mlir_type_create_tensor_dynamic.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_tensor_dynamic", context, rank, elementType);
            }
            return (MemorySegment)mh$.invokeExact(context, rank, elementType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_type_destroy(MLIRTypeHandle type)
     * }
     */
    public static FunctionDescriptor mlir_type_destroy$descriptor() {
        return mlir_type_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_type_destroy(MLIRTypeHandle type)
     * }
     */
    public static MethodHandle mlir_type_destroy$handle() {
        return mlir_type_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_type_destroy(MLIRTypeHandle type)
     * }
     */
    public static MemorySegment mlir_type_destroy$address() {
        return mlir_type_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mlir_type_destroy(MLIRTypeHandle type)
     * }
     */
    public static void mlir_type_destroy(MemorySegment type) {
        var mh$ = mlir_type_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_destroy", type);
            }
            mh$.invokeExact(type);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_function_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_function_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRFunctionHandle mlir_function_create(MLIRModuleHandle module, const char *name, MLIRTypeHandle *inputTypes, size_t numInputs, MLIRTypeHandle *outputTypes, size_t numOutputs)
     * }
     */
    public static FunctionDescriptor mlir_function_create$descriptor() {
        return mlir_function_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRFunctionHandle mlir_function_create(MLIRModuleHandle module, const char *name, MLIRTypeHandle *inputTypes, size_t numInputs, MLIRTypeHandle *outputTypes, size_t numOutputs)
     * }
     */
    public static MethodHandle mlir_function_create$handle() {
        return mlir_function_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRFunctionHandle mlir_function_create(MLIRModuleHandle module, const char *name, MLIRTypeHandle *inputTypes, size_t numInputs, MLIRTypeHandle *outputTypes, size_t numOutputs)
     * }
     */
    public static MemorySegment mlir_function_create$address() {
        return mlir_function_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRFunctionHandle mlir_function_create(MLIRModuleHandle module, const char *name, MLIRTypeHandle *inputTypes, size_t numInputs, MLIRTypeHandle *outputTypes, size_t numOutputs)
     * }
     */
    public static MemorySegment mlir_function_create(MemorySegment module, MemorySegment name, MemorySegment inputTypes, long numInputs, MemorySegment outputTypes, long numOutputs) {
        var mh$ = mlir_function_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_function_create", module, name, inputTypes, numInputs, outputTypes, numOutputs);
            }
            return (MemorySegment)mh$.invokeExact(module, name, inputTypes, numInputs, outputTypes, numOutputs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_function_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_function_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_function_destroy(MLIRFunctionHandle function)
     * }
     */
    public static FunctionDescriptor mlir_function_destroy$descriptor() {
        return mlir_function_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_function_destroy(MLIRFunctionHandle function)
     * }
     */
    public static MethodHandle mlir_function_destroy$handle() {
        return mlir_function_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_function_destroy(MLIRFunctionHandle function)
     * }
     */
    public static MemorySegment mlir_function_destroy$address() {
        return mlir_function_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mlir_function_destroy(MLIRFunctionHandle function)
     * }
     */
    public static void mlir_function_destroy(MemorySegment function) {
        var mh$ = mlir_function_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_function_destroy", function);
            }
            mh$.invokeExact(function);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_function_get_argument {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_function_get_argument");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_function_get_argument(MLIRFunctionHandle function, size_t index)
     * }
     */
    public static FunctionDescriptor mlir_function_get_argument$descriptor() {
        return mlir_function_get_argument.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_function_get_argument(MLIRFunctionHandle function, size_t index)
     * }
     */
    public static MethodHandle mlir_function_get_argument$handle() {
        return mlir_function_get_argument.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_function_get_argument(MLIRFunctionHandle function, size_t index)
     * }
     */
    public static MemorySegment mlir_function_get_argument$address() {
        return mlir_function_get_argument.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_function_get_argument(MLIRFunctionHandle function, size_t index)
     * }
     */
    public static MemorySegment mlir_function_get_argument(MemorySegment function, long index) {
        var mh$ = mlir_function_get_argument.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_function_get_argument", function, index);
            }
            return (MemorySegment)mh$.invokeExact(function, index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_add {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_add");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_add(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_add$descriptor() {
        return mlir_tosa_add.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_add(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_add$handle() {
        return mlir_tosa_add.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_add(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_add$address() {
        return mlir_tosa_add.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_add(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_add(MemorySegment function, MemorySegment lhs, MemorySegment rhs, MemorySegment resultType) {
        var mh$ = mlir_tosa_add.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_add", function, lhs, rhs, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, lhs, rhs, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_sub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_sub");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
